Started Work On The Dashboard

--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.5.22"
-    }
+    },
+    "dependencies": {}
 }
