--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.5.22"
     },
-    "dependencies": {}
+    "dependencies": {
+        "bs-custom-file-input": "^1.3.1"
+    }
 }
